<resources>
    <string name="app_name">Lift RPG</string>
    <string name="tutorial_intro">Tutorial Intro</string>
    <string name="test_title">Test Title</string>
    <string name="test_desc">Test Description</string>
    <string name="new_session">New session</string>
    <string name="workout_session">Workout Session</string>
    <string name="bench_press">Bench Press</string>
    <string name="ohp">OHP</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="xp">XP</string>
    <string name="save">save</string>
    <string name="barbell_row">Barbell Row</string>
    <string name="delete_data">Delete data</string>
    <string name="view_history">View History</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_progress">Progress</string>
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_program">Program</string>
    <string name="drawer_item_about">About</string>
    <string name="weigh_in">Weigh in</string>
    <string name="lvl_0_tadpole">Lvl 0 Tadpole</string>
    <string name="last_session">Last session</string>
    <string name="main">Main</string>
    <string name="assistance">Assistance</string>
    <string name="workout_activity">Workout Activity</string>
    <string name="save_session">Save session</string>
    <string name="discard_session">Discard session</string>
    <string name="weight_unit">Weight unit</string>
    <string name="settings_activity">Settings activity</string>
    <string name="equipment">Equipment</string>
    <string name="workout_name">Workout Name</string>
    <string name="reps_x_set_weight"><u>0x0 0 lbs</u></string>
    <string name="add_set">Add set and rest</string>
    <string name="weight_before_stepper">000.0 lbs</string>
    <string name="saved_set_text">000 x 0</string>
    <string name="body_weight">Body weight</string>
    <string name="weight_saved">Weight saved</string>
    <string name="empty_recyclerview">You have not added any assistance exercises.
        \nGo to Program to add some.</string>
    <string name="server_client_id">56365717436-3h3mnib825ufli7t0h6esmt0ag88l3hk.apps.googleusercontent.com</string>
</resources>
