<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exercise_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="1dp"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:clickable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/workout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:background="@color/colorWhite"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/workout_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/sets_reps_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:gravity="end"
                android:paddingTop="22dp"
                android:paddingEnd="16dp"
                android:text="@string/reps_x_set_weight"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"/>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@color/colorWhite"
                android:elevation="1dp"
                app:el_duration="400"
                app:el_expanded="false"
                app:el_parallax="0.5">

                <TextView
                    android:id="@+id/weight_before_stepper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/weight_before_stepper"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="112dp"
                    android:paddingTop="8dp"
                    android:text="X"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="20sp"/>

                <nl.dionsegijn.steppertouch.StepperTouch
                    android:id="@+id/stepper_touch"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="6dp"
                    app:stepperTextSize="10sp"
                    app:stepperBackgroundColor="@color/colorWhite"
                    app:stepperActionsColor="@color/colorPrimaryText"
                    app:stepperActionsDisabledColor="@color/md_grey_400"/>

                <com.rey.material.widget.Button
                    android:id="@+id/add_set_button"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="240dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_set"
                    android:textColor="@color/colorWhite" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/completed_sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/colorWhite"
                    android:elevation="1dp"
                    android:animateLayoutChanges="true"
                    app:el_duration="400"
                    app:el_expanded="true"
                    app:el_parallax="0.5">

                    <TextView
                        android:id="@+id/saved_set1"
                        android:visibility="invisible"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="8dp"
                        android:padding="4dp"
                        android:paddingEnd="6dp"
                        android:background="@color/color_incomplete_set"
                        android:text="@string/saved_set_text"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/saved_set2"
                        android:visibility="invisible"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="85dp"
                        android:padding="4dp"
                        android:paddingEnd="6dp"
                        android:background="@color/color_incomplete_set"
                        android:text="@string/saved_set_text"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/saved_set3"
                        android:visibility="invisible"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:paddingEnd="6dp"
                        android:background="@color/color_incomplete_set"
                        android:text="@string/saved_set_text"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/saved_set4"
                        android:visibility="invisible"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="240dp"
                        android:padding="4dp"
                        android:paddingEnd="6dp"
                        android:background="@color/color_incomplete_set"
                        android:text="@string/saved_set_text"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/saved_set5"
                        android:visibility="invisible"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="end"
                        android:padding="4dp"
                        android:paddingEnd="6dp"
                        android:background="@color/color_incomplete_set"
                        android:text="@string/saved_set_text"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorWhite"/>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>